[gd_scene load_steps=6 format=3 uid="uid://cw1ig4ql83b6a"]

[ext_resource type="Script" path="res://Scripts/ThreadView.gd" id="1_gunt8"]
[ext_resource type="Script" path="res://Scripts/menuMain.gd" id="1_oipdw"]
[ext_resource type="Script" path="res://Scripts/ChatPane.gd" id="1_vrewx"]
[ext_resource type="Script" path="res://Scripts/Views/vboxEditor.gd" id="3_welkk"]
[ext_resource type="PackedScene" uid="uid://c8fq2jqnwlncg" path="res://Scripts/Views/EditorPane/EditorPane.tscn" id="4_826g6"]

[node name="RootControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreferencesPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
size = Vector2i(520, 171)

[node name="VBoxContainer" type="VBoxContainer" parent="PreferencesPopup"]
custom_minimum_size = Vector2(512, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 516.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PreferencesPopup/VBoxContainer"]
layout_mode = 2
text = "API KEYS"

[node name="HBoxContainer" type="HBoxContainer" parent="PreferencesPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="PreferencesPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.3
text = "Google Vertex"

[node name="leGoogleVertexKey" type="LineEdit" parent="PreferencesPopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PreferencesPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PreferencesPopup/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Anthropic"

[node name="leAnthropicKey" type="LineEdit" parent="PreferencesPopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="PreferencesPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PreferencesPopup/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "OpenAI"

[node name="leOpenAIKey" type="LineEdit" parent="PreferencesPopup/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="PreferencesPopup/VBoxContainer"]
layout_mode = 2

[node name="btnSavePrefs" type="Button" parent="PreferencesPopup/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Save"

[node name="btnCancel" type="Button" parent="PreferencesPopup/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Cancel"

[node name="NewThreadPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="NewThreadPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
size_flags_horizontal = 3

[node name="HBoxTopRow" type="HBoxContainer" parent="NewThreadPopup/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="NewThreadPopup/VBoxContainer/HBoxTopRow"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name"

[node name="txtNewTabName" type="TextEdit" parent="NewThreadPopup/VBoxContainer/HBoxTopRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Tab Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="NewThreadPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NewThreadPopup/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="btnCreateThread" type="Button" parent="NewThreadPopup/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Create"

[node name="InspectorPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
size = Vector2i(520, 520)
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="InspectorPopup"]
custom_minimum_size = Vector2(512, 512)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="cdePrompt" type="CodeEdit" parent="InspectorPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Prompt Here"
line_folding = true

[node name="btnCloseInspector" type="Button" parent="InspectorPopup/VBoxContainer"]
layout_mode = 2

[node name="VBoxRoot" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menuMain" type="MenuBar" parent="VBoxRoot"]
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("1_oipdw")

[node name="fdgOpen" type="FileDialog" parent="VBoxRoot/menuMain"]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(392, 159)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="File" type="PopupMenu" parent="VBoxRoot/menuMain"]
title = "File"
item_count = 2
item_0/text = "Open"
item_0/id = 0
item_1/text = "Preferences"
item_1/id = 1

[node name="MainContainer" type="HBoxContainer" parent="VBoxRoot"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxRoot/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSplitContainer2" type="HSplitContainer" parent="VBoxRoot/MainContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftPane" type="VBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Chats"

[node name="btnNewChat" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "New"

[node name="tcChats" type="TabContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_vrewx")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane"]
layout_mode = 2
size_flags_vertical = 8

[node name="txtMemoryTitle" type="TextEdit" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 8
placeholder_text = "Memory Title"

[node name="txtMainUserInput" type="TextEdit" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 255)
layout_mode = 2
placeholder_text = "Hello there!"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Button" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Attach"

[node name="Button2" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Memorize"

[node name="Button3" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Chat"

[node name="Button4" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="btnInspect" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Inspect"

[node name="MiddlePane" type="VBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Editor"

[node name="HButton" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "H"

[node name="VButton" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "V"

[node name="vboxEditorMain" type="VBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer" node_paths=PackedStringArray("editor_pane")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_welkk")
editor_pane = NodePath("EditorPane")

[node name="EditorPane" parent="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/vboxEditorMain" instance=ExtResource("4_826g6")]
layout_mode = 2

[node name="RightPane" type="VBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxRoot/MainContainer/HSplitContainer/RightPane"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxRoot/MainContainer/HSplitContainer/RightPane/HBoxContainer"]
layout_mode = 2
text = "Memory Items"

[node name="btnNewTab" type="Button" parent="VBoxRoot/MainContainer/HSplitContainer/RightPane/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "New"

[node name="tcThreads" type="TabContainer" parent="VBoxRoot/MainContainer/HSplitContainer/RightPane"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_gunt8")

[connection signal="pressed" from="PreferencesPopup/VBoxContainer/HBoxContainer4/btnSavePrefs" to="VBoxRoot/menuMain" method="_on_save_keys_pressed"]
[connection signal="pressed" from="NewThreadPopup/VBoxContainer/HBoxContainer2/btnCreateThread" to="VBoxRoot/MainContainer/HSplitContainer/RightPane/tcThreads" method="_on_btn_create_thread_pressed"]
[connection signal="file_selected" from="VBoxRoot/menuMain/fdgOpen" to="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/vboxEditorMain" method="_on_open_file"]
[connection signal="index_pressed" from="VBoxRoot/menuMain/File" to="VBoxRoot/menuMain" method="_on_file_index_pressed"]
[connection signal="pressed" from="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer2/HBoxContainer/btnNewChat" to="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/tcChats" method="_on_new_chat"]
[connection signal="pressed" from="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer/Button2" to="VBoxRoot/MainContainer/HSplitContainer/RightPane/tcThreads" method="_on_memorize_pressed"]
[connection signal="pressed" from="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer/Button3" to="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/tcChats" method="_on_chat_pressed"]
[connection signal="pressed" from="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/VBoxContainer/HBoxContainer/btnInspect" to="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/LeftPane/tcChats" method="_on_btn_inspect_pressed"]
[connection signal="pressed" from="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/HBoxContainer/HButton" to="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/vboxEditorMain" method="_on_h_button_pressed"]
[connection signal="pressed" from="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/HBoxContainer/VButton" to="VBoxRoot/MainContainer/HSplitContainer/HSplitContainer2/MiddlePane/VBoxContainer/vboxEditorMain" method="_on_v_button_pressed"]
[connection signal="pressed" from="VBoxRoot/MainContainer/HSplitContainer/RightPane/HBoxContainer/btnNewTab" to="VBoxRoot/MainContainer/HSplitContainer/RightPane/tcThreads" method="_on_new_pressed"]
